Improved the Build.gradle